--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
   },
   "dependencies": {
     "@googlemaps/three": "^4.0.13",
+    "@mysten/dapp-kit": "^0.18.0",
+    "@mysten/enoki": "^0.12.0",
+    "@mysten/seal": "^0.6.0",
+    "@mysten/sui.js": "^0.54.1",
+    "@mysten/wallet-adapter-base": "^0.9.0",
+    "@mysten/wallet-adapter-react": "^11.0.0",
+    "@mysten/wallet-adapter-sui-wallet": "^0.3.0",
+    "@mysten/wallet-adapter-wallet-standard": "^0.8.0",
+    "@mysten/walrus": "^0.7.0",
+    "@tanstack/react-query": "^5.87.4",
     "@types/three": "^0.180.0",
     "next": "15.5.3",
     "react": "19.1.0",
