--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,19 +12,19 @@
   "categories": ["maps", "utilities", "navigation"],
   "icons": [
     {
-      "src": "/favicon.ico",
+      "src": "/icon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "/favicon.ico",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/favicon.ico",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -38,7 +38,7 @@
       "url": "/",
       "icons": [
         {
-          "src": "/favicon.ico",
+          "src": "/icon-192x192.png",
           "sizes": "192x192"
         }
       ]
