Feat: Minting&Walrus

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,13 +18,13 @@
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-192x192.png",
+      "src": "/dino-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/dino-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -38,7 +38,7 @@
       "url": "/",
       "icons": [
         {
-          "src": "/icon-192x192.png",
+          "src": "/dino-192x192.png",
           "sizes": "192x192"
         }
       ]
